@@ -4,43 +4,65 @@ package com.my.queryservice.service;
 import com.my.queryservice.dto.response.UserResponse;
 import com.my.queryservice.entity.User;
 import com.my.queryservice.exceptions.UserNotFoundException;
-import com.my.queryservice.repository.UserRepository;
+import com.my.queryservice.repository.redis.UserRedisRepository;
+import com.my.queryservice.repository.jpa.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
 
     private final UserRepository userRepository;
+    private final UserRedisRepository userRedisRepository;
 
 
     @Transactional(readOnly = true)
     public UserResponse findById(UUID id) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
+        User user = userRedisRepository.findById(id).orElseGet(() -> {
+            User entity = userRepository.findById(id)
+                    .orElseThrow(() -> new UserNotFoundException("User not found"));
+
+            userRedisRepository.save(entity);
+
+            return entity;
+        });
 
         return toUserResponse(user);
+
     }
 
     @Transactional(readOnly = true)
     public UserResponse findByUsername(String username) {
-        User user = (User) userRepository.findByUsername(username)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
+        User user = userRedisRepository.findByUsername(username).orElseGet(() -> {
+            User entity = (User) userRepository.findByUsername(username)
+                    .orElseThrow(() -> new UserNotFoundException("User not found"));
+
+            userRedisRepository.save(entity);
+
+            return entity;
+        });
 
         return toUserResponse(user);
+
     }
 
     @Transactional(readOnly = true)
     public List<UserResponse> findAll() {
-        List<User> users = userRepository.findAll();
+        List<User> cached = userRedisRepository.findAll();
 
-        return users.stream().map(this::toUserResponse).collect(Collectors.toList());
+        if (!cached.isEmpty()) {
+            return cached.stream().map(this::toUserResponse).toList();
+        }
+
+        List<User> entities = userRepository.findAll();
+        entities.forEach(userRedisRepository::save);
+
+        return entities.stream().map(this::toUserResponse).toList();
     }
 
 
